# culturelist

./: AGENTS.md  Cargo.toml  justfile
configurations/: base.toml
migrations/: 20260203064035_users.up.sql
public/assets/css/: main.css
public/scripts/: datastar.js
queries/users/: create.sql  delete.sql  get_by_email.sql  get_by_id.sql  get_by_username.sql  list.sql  list_count.sql  update.sql
src/: lib.rs  logger.rs
src/controllers/: users.rs
src/models/: user.rs
src/router/: mod.rs
src/router/pages/: home.rs  login.rs  signup.rs
src/services/: mod.rs  users_service.rs
src/storage/: mod.rs  users_storage.rs
templates/layout/: base.html  header.html
templates/pages/home/: page.html
templates/pages/login/: loginform.html  page.html
templates/pages/notfound/: page.html
templates/pages/signup/: page.html  signupform.html
