[package]
name = "culturelist"
version = "0.1.0"
edition = "2024"
description = "Book Tracker"
authors = ["Aleksandr Provotorov <provotorov@inbox.ru>"]

[lib]
path = "src/lib.rs"
name = "app"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
# errors
anyhow = "1.0.100"

# logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
log = "0.4.29"

# serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# config
config = "0.15.19"

# async
tokio = { version = "1.49.0", features = ["full"] }

# server
tower-http = { version = "0.6.8", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "multipart"] }
axum_session = { version = "0.17.1", features = ["advanced"] }
axum_session_sqlx = { version = "0.6.1", features = ["postgres"] }
tower = "0.5.3"

# frontend
askama_web = { version = "0.15.1", features = ["axum-0.8", "tracing-0.1"] }
askama = { version = "0.15.4", features = ["full"] }
datastar = { version = "0.3.1", features = ["axum", "tracing"] }

# utils
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }

# authentication
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# database
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
    "macros",
    "migrate",
    "tls-rustls",
]

[dev-dependencies]
fake = { version = "4.4.0", features = [
    "chrono",
    "chrono-tz",
    "derive",
    "email_address",
    "uuid",
] }
