[package]
name = "culturelist"
version = "0.1.0"
edition = "2024"
description = "Book Tracker"

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
# errors
anyhow = "1.0.103"

# logging
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# config
config = "0.15.25"

# serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

async-trait = "0.1.89"
# async
tokio = { version = "1.52.3", features = ["full"] }

axum = { version = "0.8.9", features = ["macros", "multipart"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
axum_session = { version = "0.20.1", features = ["advanced"] }
axum_session_auth = "0.20.0"
axum_session_sqlx = { version = "0.10.0", features = ["postgres"] }
tower = "0.5.3"
# server
tower-http = { version = "0.7.0", features = ["full"] }

askama = { version = "0.16.0", features = ["full"] }
# frontend
askama_web = { version = "0.16.0", features = ["axum-0.8", "tracing-0.1"] }
datastar = { version = "0.3.1", features = ["axum", "tracing"] }

argon2 = "0.5.3"
asynk-strim = "0.1.5"
# utils
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

# authentication
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }

# database
[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
]

[dev-dependencies]
fake = {
  version = "5.1.0",
  features = [
    "chrono",
    "chrono-tz",
    "derive",
    "email_address",
    "uuid",
  ]
}
